plugins {
    id 'java'
    id 'maven'

    id "org.jetbrains.kotlin.jvm" version "1.3.40"
}

group = 'com.blazer'
version = '1.0'

description = "Sandbox playground"

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
     maven { url "https://oss.sonatype.org/content/repositories/google-releases" }
     mavenCentral()
}
dependencies {
    compile group: 'org.projectlombok', name: 'lombok', version:'1.12.6'
    compile group: 'com.h2database', name: 'h2', version:'1.3.174'
    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version:'4.2.7.Final'
    compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.5'
    compile group: 'org.slf4j', name: 'slf4j-ext', version:'1.7.5'
    compile group: 'log4j', name: 'log4j', version:'1.2.17'
    compile group: 'org.yaml', name: 'snakeyaml', version:'1.13'
    compile group: 'com.google.guava', name: 'guava', version:'15.0'
    compile group: 'com.google.inject', name: 'guice', version:'3.0'
    compile group: 'com.google.inject.extensions', name: 'guice-servlet', version:'3.0'
    compile group: 'org.apache.activemq', name: 'activemq-all', version:'5.9.0'
    compile group: 'com.google.code.findbugs', name: 'jsr305', version:'2.0.2'
    compile group: 'org.eclipse.jetty', name: 'jetty-server', version:'9.1.0.v20131115'
    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version:'9.1.0.v20131115'
    compile group: 'org.eclipse.jetty', name: 'jetty-annotations', version:'9.1.0.v20131115'
    compile group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
    compile group: 'org.codehaus.groovy', name: 'groovy-all', version:'2.2.1'

    testCompile group: 'junit', name: 'junit', version:'4.11'
    testCompile group: 'org.mockito', name: 'mockito-core', version:'1.9.5'
}
